tests/fail/null/3.has
function main() : int {
    var z : int = NULL

    return 0
}